--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #head1{
 margin-top: 50px;
-margin-right: 0px;
+text-align: center;
 font-family: "roboto-flex";
 color: orange;
 text-shadow: 2px 2px 2px black;
