--- a/style.css
+++ b/style.css
@@ -324,6 +324,9 @@ background-size: cover;
   text-align: center;
   padding: 20px;
   margin-top: 50px;
+  margin-right:-8px;
+  margin-left:-8px;
+  margin-bottom: -6px;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   color: #dddddd;
