--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ background-size: cover;
   margin-bottom: -6px;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
-  color: green;
+  color: white;
   background-color: rgba(0, 0, 0, 0.6);
   border-top: 1px solid #444;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
