--- a/style.css
+++ b/style.css
@@ -301,10 +301,13 @@ padding: 10px;
 }
 .signature img{
 position:relative;
+background-color:rgb(184, 182, 182,0.3);
+border-radius:50px;
+padding:5px;
 left:170px;
 }
 .signature img:hover{
-background-color:rgb(201, 240, 200);
+background-color:rgb(72, 221, 247, 0.7);
 border-radius:50px;
 padding:5px;
 }
@@ -329,8 +332,8 @@ background-size: cover;
   margin-bottom: -6px;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.6);
+  color: #dddddd;
+  background-color: rgba(0, 0, 0, 0.3);
   border-top: 1px solid #444;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
 }
