--- a/style.css
+++ b/style.css
@@ -312,6 +312,10 @@ float: left;
 margin-left: 25px;
 margin-top: -35px;
 border: 2px solid orange;
+transition: transform 1s ease;
+}
+#img1:hover{
+transform: scale(1.03,1.03) translate(10px,10px);
 }
 .signature{
 float: right;
@@ -344,21 +348,66 @@ font-family: roboto;
 font-size: 30;
 color: rgb(52, 237, 135);
 }
+header{
+opacity:0;
+animation: disp 1.2s ease forwards;
+animation-delay:3.2s;
+}
+@keyframes disp{
+to{ opacity:1;}
+}
 body{
 background-image: url('4.jpg');
 background-size: cover; 
 }
-.footer{
-  text-align: center;
-  padding: 20px;
-  margin-top: 50px;
-  margin-right:-8px;
-  margin-left:-8px;
-  margin-bottom: -6px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  color: #dddddd;
-  background-color: rgba(0, 0, 0, 0.3);
-  border-top: 1px solid #444;
-  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
+.page-content {
+opacity: 0;
+transform: translateY(60px);
+animation: fadeIn 1.8s ease forwards;
+animation-delay: 3.5s; 
+}
+@keyframes fadeIn {
+to{opacity: 1;
+transform: translateY(0px);
+}
+}
+footer{
+text-align: center;
+padding: 20px;
+margin-top: 50px;
+margin-right:-8px;
+margin-left:-8px;
+margin-bottom: -6px;
+font-family: 'Roboto', sans-serif;
+font-size: 18px;
+color: #dddddd;
+background-color: rgba(0, 0, 0, 0.3);
+border-top: 1px solid #444;
+box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
+}
+#welcome {
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-image: url(wcm.jpg);
+background-size:cover;
+background-position: center;
+color: rgb(96, 202, 209);
+text-shadow: 1px 1px 4px black;
+font-family:"bonheur royale";
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 3em;
+z-index: 9999;
+animation: fadeOut 2s ease 2s forwards;
+}
+
+@keyframes fadeOut {
+to {
+opacity: 0;
+visibility: hidden;
+}
 }
